include/playbox/pb_gfx.h

/* ---- Display width (East-Asian / emoji aware) ---- */
/* pb_char_width is declared in pb_fb.h */

/* ---- Text wrap / clip ---- */
/* Returns number of rows written. max_w/max_h in cells. */
PB_API int pb_fb_text_wrap(pb_fb* fb, int x, int y, int max_w, int max_h,
                           const char* utf8, pb_color fg, pb_color bg, uint16_t style);
PB_API void pb_fb_text_clipped(pb_fb* fb, int x, int y, int max_w,
                               const char* utf8, pb_color fg, pb_color bg, uint16_t style);
PB_API int pb_fb_measure_text_ex(const char* utf8); /* alias of pb_fb_measure_text */
/* ---- Camera & scissor ---- */

PB_API void pb_fb_set_camera(pb_fb* fb, int cam_x, int cam_y);
PB_API void pb_fb_get_camera(const pb_fb* fb, int* out_x, int* out_y);
PB_API void pb_fb_set_clip(pb_fb* fb, int x, int y, int w, int h);
PB_API void pb_fb_reset_clip(pb_fb* fb);
/* ---- Box styles / panels / shadows ---- */

typedef enum {
    PB_BOX_SINGLE = 0,
    PB_BOX_DOUBLE = 1,
    PB_BOX_ROUNDED = 2,
    PB_BOX_HEAVY = 3,
    PB_BOX_ASCII = 4,
    PB_BOX_DASHED = 5
} pb_box_style;
PB_API void pb_fb_box_ex(pb_fb* fb, int x, int y, int w, int h,
                         pb_box_style box_style, pb_color fg, pb_color bg, uint16_t style);
PB_API void pb_fb_panel_ex(pb_fb* fb, int x, int y, int w, int h, const char* title,
                           pb_box_style box_style, pb_color border, pb_color title_fg,
                           pb_color fill, uint16_t style);
PB_API void pb_fb_shadow(pb_fb* fb, int x, int y, int w, int h, pb_color shadow, float alpha);
/* level 0..4 → ' ' ░ ▒ ▓ █ */

/* ---- Soft blends & fills ---- */

typedef enum {
    PB_BLEND_REPLACE = 0,
    PB_BLEND_ALPHA = 1,
    PB_BLEND_ADD = 2,
    PB_BLEND_MUL = 3
} pb_blend_mode;
/* ---- Sprite sheets ---- */

typedef struct {
    pb_fb atlas;
    int tile_w;
    int tile_h;
    int cols;
    int rows;
    int owns_atlas;
} pb_sheet;
/* ---- Animation helper ---- */

typedef struct {
    const int* frames;
    int frame_count;
    float fps;
    float t;
    int loop;
} pb_anim;
/* ---- Lightweight particles (braille) ---- */

typedef struct {
    float x, y;
    float vx, vy;
    float life;
    float max_life;
    pb_color color;
    uint8_t alive;
} pb_particle;
typedef struct {
    pb_particle* items;
    int count;
    int capacity;
} pb_particles;