include/playbox/pb_app.h

typedef struct pb_app pb_app;
typedef void (*pb_on_init_fn)(pb_app* app, void* user);
typedef void (*pb_on_event_fn)(pb_app* app, void* user, const pb_event* ev);
typedef void (*pb_on_update_fn)(pb_app* app, void* user, double dt);
typedef void (*pb_on_draw_fn)(pb_app* app, void* user, pb_fb* fb);
typedef void (*pb_on_shutdown_fn)(pb_app* app, void* user);
enum {
    PB_APP_FLAG_NO_AUTO_CLEAR = 1u << 0,
    PB_APP_FLAG_NO_MOUSE      = 1u << 1,
    PB_APP_FLAG_NO_FOCUS      = 1u << 2,
    PB_APP_FLAG_CUSTOM_CLEAR  = 1u << 3,
    /* Disable precise vsync-style frame pacing (uncapped / best-effort). */
    PB_APP_FLAG_NO_VSYNC      = 1u << 4
};
typedef struct {
    const char* title;
    int target_fps;
    uint32_t flags;
    pb_cell clear;
    pb_on_init_fn on_init;
    pb_on_event_fn on_event;
    pb_on_update_fn on_update;
    pb_on_draw_fn on_draw;
    pb_on_shutdown_fn on_shutdown;
} pb_app_desc;